cluster/manifests/hippocampus-dev-slack-oauth-bridge/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hippocampus-dev-slack-oauth-bridge
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hippocampus-dev-slack
      app.kubernetes.io/component: oauth-bridge
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hippocampus-dev-slack-oauth-bridge-redis-haproxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hippocampus-dev-slack
      app.kubernetes.io/component: redis-haproxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: hippocampus-dev-slack-oauth-bridge
          podSelector:
            matchLabels:
              app.kubernetes.io/name: hippocampus-dev-slack
              app.kubernetes.io/component: oauth-bridge
      ports:
        - protocol: TCP
          port: 6380
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hippocampus-dev-slack-oauth-bridge-redis-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              app: istiod
      ports:
        - protocol: TCP
          port: 15012
    - to:
        - namespaceSelector:
            matchLabels:
              name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-agent
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 4317
